--- a/数据结构学习总结/数据结构.md
+++ b/数据结构学习总结/数据结构.md
@@ -83,6 +83,8 @@ $$
 
 当代码时间复杂度由多个数据的规模来决定时，原先的加法法则不行，即需要将多个数据的时间复杂度加起来，不可忽略，乘法法则可以。
 
+### 最好时间复杂度
+
 ## 空间复杂度
 
 ​	全称为渐进空间复杂度，表示算法的存储空间与数据规模之间的增长关系。
