四种复杂度分析

--- a/数据结构学习总结/数据结构.md
+++ b/数据结构学习总结/数据结构.md
@@ -83,7 +83,15 @@ $$
 
 当代码时间复杂度由多个数据的规模来决定时，原先的加法法则不行，即需要将多个数据的时间复杂度加起来，不可忽略，乘法法则可以。
 
-### 最好时间复杂度
+### 几种时间复杂度分析
+
+1. 最好情况时间复杂度；
+
+2. 最坏情况时间复杂度；
+
+3. 平均情况时间复杂度（需引入概率论知识计算平均概率）；
+
+4. 均摊时间复杂度，均摊其实可以理解为特殊的平均，就是出现概率大的复杂度就可以理解为均摊时间复杂度。
 
 ## 空间复杂度
 
