--- a/数据结构学习总结/数据结构.md
+++ b/数据结构学习总结/数据结构.md
@@ -113,9 +113,9 @@ $$
    
 ### 数组为什么以0为初始下标
 
-   1. C语言初始以C为下标，大部分语言也就学习C语言；
+   1. C语言初始以0为下标，大部分语言也就学习C语言；
    
-   2. 在计算内存区域的时候用0为初始可比用1为初始少一部减法操作。
+   2. 在计算内存区域的时候用0为初始可比用1为初始少一步减法操作。
    
 ### 基础数组和容器应如何选择？
    
