--- a/数据结构学习总结/数据结构.md
+++ b/数据结构学习总结/数据结构.md
@@ -119,7 +119,7 @@ $$
    
 ### 基础数组和容器应如何选择？
    
-   大多数语言针对数组类型都有封装容器类，如Java的ArrayList，我们使用的时候应如何抉择呢？
+   大多数高级语言针对数组类型都有封装容器类，如Java的ArrayList，我们使用的时候应如何抉择呢？
    
    首先应该明白容器的作用，容器是把对数组的扩容等操作封装了起来，使得我们开发时屏蔽底层细节操作。另外，在Java里，容器类是无法存储基本数据类型的，需要自动封箱/拆箱操作，具有效率问题。
    
