--- a/数据结构学习总结/数据结构.md
+++ b/数据结构学习总结/数据结构.md
@@ -124,3 +124,9 @@ $$
    首先应该明白容器的作用，容器是把对数组的扩容等操作封装了起来，使得我们开发时屏蔽底层细节操作。另外，在Java里，容器类是无法存储基本数据类型的，需要自动封箱/拆箱操作，具有效率问题。
    
    所以我们在选择容器或是数组的时候可遵循：业务开发，不关注些许性能，且能够用到容器类提供的自动扩容功能，就可以直接使用容器类，简单；底层框架开发，或极注重性能，或者用不到容器类提供的方法，这样直接使用数组就OK了。
+   
+   二维数组内存寻址：
+
+   对于 m * n 的数组，a [ i ][ j ] (i < m,j < n)的地址为：
+
+   address = base_address + ( i * n + j) * type_size
