--- a/分布式/分布式总览.md
+++ b/分布式/分布式总览.md
@@ -1,8 +1,49 @@
 # 分布式
 
-## 1.基本概念
+## 总览
 
-#### 1.1.微服务架构
+### 0.易混概念
+
+##### 0.1.分布式&微服务
+
+​	分布式系统是相对于单体架构来说的，就是把一个系统拆分为多个系统，每个系统都是一个单独的个体，相比单体系统有利有弊。
+
+​	微服务是一种服务间松耦合的、每个服务之间高度自治并且使用轻量级协议进行通信的可持续集成部署的分布式架构体系。属于分布式架构。
+
+​	分布式架构的典型代表有SOA和微服务。
+
+##### 0.2.集群&分布式&节点
+
+​	集群是物理形态，分布式是工作形式。
+
+​	一堆机器组成集群，合力完成同个业务。分布式是一个系统分为多个业务服务，每个业务运行在不同的机器（集群）。集群中的单个机器叫做节点。
+
+### 1.分布式架构
+
+#### 1.1.优点
+
+- 业务解耦
+- 系统模块化，可重用化提升
+- 提升系统并发量
+- 优化运维部署效率
+
+#### 1.2.缺点
+
+- 架构复杂
+- 部署多个子系统复杂
+- 系统之间通信耗时
+- 学习成本高，新人融入慢
+- 调试复杂
+
+#### 1.3.设计分布式架构的原则
+
+- 异步解耦
+- 幂等一致性
+- 拆分原则
+- 融合分布式中间件
+- 容错高可用
+
+### 2.微服务架构
 
 组成（主要目的：弱耦合，高可用）
 
@@ -15,44 +56,42 @@
 
 非大型单体应用，基于业务进行服务拆分，各个服务独立部署。
 
-#### 1.2.集群&分布式&节点
-
-​	集群是物理形态，分布式是工作形式。
-
-​	一堆机器组成集群，合力完成同个业务。分布式是一个系统分为多个业务服务，每个业务运行在不同的机器（集群）。集群中的单个机器叫做节点。
-
-#### 1.3.远程调用
+#### 2.1.远程调用
 
 ​	分布式各个服务在不同机器上，各个服务间的互相调用，称为远程调用。
 
 ​	SpringCloud使用Http+JSON形式完成远程调用。
 
-#### 1.4.负载均衡
+#### 2.2.负载均衡
 
 ​	分布式系统中，每个服务都是以集群形式存在，为了不使集群中某个机器太忙或太闲，我们需要实现集群的负载均衡，提升系统健壮性。
 
 ​	常见的负载均衡算法：轮询、最小连接、散列。
 
-#### 1.5.服务注册/发现&注册中心
+#### 2.3.服务注册/发现&注册中心
 
 ​	各服务之间的连接者，也可称为管理者，叫做注册中心。
 
-#### 1.6.配置中心
+#### 2.4.配置中心
 
 ​	集中管理各个服务的配置信息。
 
-#### 1.7.服务熔断&服务降级
+#### 2.5.服务熔断&服务降级
 
 ​	保障分布式系统，避免其中其中一个服务出错，全部崩溃的情况，一种容错机制。
 
-##### 1.7.1.服务熔断
+##### 服务熔断
 
 ​	设置服务超时时间，当某个服务调用失败次数达到某个阀值，直接开启断路保护机制，后来的请求不调用这个服务，直接返回默认值。
 
-##### 1.7.2.服务降级
+##### 服务降级
 
 ​		系统运行期间，在系统高峰期，系统资源紧张，将某些非核心业务降级处理，如不处理或简单处理（返回默认值、抛异常等）。
 
-#### 1.8.API网关
+#### 2.6.API网关
 
 ​	微服务架构中的入口，抽象了微服务架构中的公共功能，如统一认证、负载均衡、限流等，帮助解决API管理问题。
+
+### 3.分布式缓存
+
+​	见Redis笔记。
